# pdq-wasm

./: .gitignore  .gitmodules  .npmignore  .npmrc  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FINAL_SUMMARY.md  LICENSE  PUBLISHING.md  README.md  jest.config.js  package-lock.json  package.json  playwright.config.ts  report.md  test-basic.js  test-inspect.js  tsconfig.json  verify.sh
.github/workflows/: ci.yml  publish.yml
__tests__/: README.md  browser.test.ts  image-similarity.test.ts  pdq.test.ts  worker-pool.test.ts
__tests__/e2e/: duplicate-detection.spec.ts  generate-test-images.js  test-helpers.ts  worker-pool.spec.ts
__tests__/e2e/webapp/: index.html  pdq-worker.js  worker-batch.html  worker-pool-batch.js  worker-pool.js  worker.html
cpp/: README.md  pdq_wasm.cpp
docs/: BROWSER.md  POSTGRESQL.md
examples/: README.md  SERVICE_WORKER.md  worker-pool-usage.ts
examples/browser/: index.html  service-worker.js
examples/nodejs/: basic-usage.js  image-comparison.js
examples/worker/: README.md  index.html  pdq-worker.js  service-worker.js
scripts/: build-browser.js  build-wasm.sh  convert-test-images.js  deploy.sh  test-basic.js  test-inspect.js  update-version-in-examples.js  verify.sh
src/: browser.ts  index.ts  pdq.ts  types.ts  worker-pool.ts
